plugins {
    id 'java'
}

group = 'cc.lokalsi'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

subprojects {
    version = '1.0'
    apply plugin: 'java'
}

allprojects {
    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }
}